--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -30,7 +30,7 @@ PIEAlwaysOnTop=False
 StandaloneWindowPosition=(X=0,Y=0)
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -100,6 +100,9 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/BP_Player_Controller.BP_Player_Controller
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -120,6 +123,30 @@ Sedan_C.Pawn=True
 Sedan_C.Rendering=True
 Sedan_C.Input=True
 Sedan_C.Actor=True
+FirstPersonCharacter_C.Default=True
+FirstPersonCharacter_C.Tick=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+BP_Player_Controller_C.PlayerController=True
+BP_Player_Controller_C.Tick=True
+BP_Player_Controller_C.Cheat Manager=True
+BP_Player_Controller_C.MouseInterface=True
+BP_Player_Controller_C.Game=True
+BP_Player_Controller_C.Controller=True
+BP_Player_Controller_C.Replication=True
+BP_Player_Controller_C.Input=True
+BP_Player_Controller_C.Actor=True
+FirstPersonGameMode_C.Tick=True
+FirstPersonGameMode_C.Classes=True
+FirstPersonGameMode_C.Game=True
+FirstPersonGameMode_C.GameMode=True
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -713,5 +740,9 @@ HierarchicalLODOutliner.TimeStamp=2018.01.17-18.48.30
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.01.17-18.48.30
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.01.17-18.48.20
+BlueprintGraph.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2018.01.17-18.48.38
+MovieSceneCapture.LastCompileMethod=Unknown
 
 
