--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -96,12 +96,17 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/NewFolder
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Geometry/NewFolder/M_Wood_Oak.M_Wood_Oak
+OpenAssetsAtExit=/Game/Geometry/Spher07_GeoSphere004.Spher07_GeoSphere004
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -170,6 +175,36 @@ BP_Sky_Sphere_C.Override settings=True
 BP_Sky_Sphere_C.Rendering=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+StaticMeshSocket.StaticMeshSocket=True
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -200,7 +235,7 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [Directories2]
-UNR=../../../../../../Users/Viking78/Documents/Unreal Projects/PapasP/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/reuko/Documents/Unreal Projects/PapasP/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/reuko/Documents/Unreal Projects/PapasP/Content/
 FBX=../../../../../../Users/reuko/Documents/Unreal Projects/PapasP/Content/
 FBXAnim=../../../../../../Users/reuko/Documents/Unreal Projects/PapasP/Content/
@@ -770,6 +805,10 @@ BlueprintGraph.TimeStamp=2018.01.17-18.48.20
 BlueprintGraph.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.02.25-18.24.48
 MovieSceneCapture.LastCompileMethod=External
+MaterialEditor.TimeStamp=2018.01.17-18.48.35
+MaterialEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.01.17-18.48.49
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [FEditorModeTools]
 CoordSystem=1
@@ -799,5 +838,16 @@ PaletteThumbnailScale=0.300000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/Geometry/NewFolder/M_Wood_Oak.M_Wood_Oak;
+
+[MaterialEditor]
+PrimType=4
 
 
